// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`harvestingBox component should match harvestingBox snapshot when author account is deleted 1`] = `
<div
  className=""
>
  <div>
    <div
      className="harvesting-close-button"
      onClick={[MockFunction]}
    >
      <span
        className="assembl-icon-cancel grey"
      />
    </div>
  </div>
  <div
    className="theme-box harvesting-box active-box"
  >
    <div
      className="harvesting-box-header"
    >
      <div
        className="extracts-nb-msg"
      >
        <Translate
          count={5}
          extractNumber={5}
          value="harvesting.harvestedExtractNumbers"
        />
      </div>
      <div
        className="harvesting-status"
      >
        <div>
          <div
            className="validated-harvesting"
          >
            <div
              className="harvesting-status-label"
            >
              <Translate
                value="harvesting.validated"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="button-bar"
      >
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="editExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.editExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-edit grey"
            />
          </Button>
        </OverlayTrigger>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="deleteExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.deleteExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-delete grey"
            />
          </Button>
        </OverlayTrigger>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="qualifyExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.qualifyExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className="taxonomy-menu-btn"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-ellipsis-vert grey"
            />
          </Button>
        </OverlayTrigger>
      </div>
      <div
        className="profile"
      >
        <AvatarImage
          userId={31}
          userName="Deleted user account"
        />
        <div
          className="harvesting-infos"
        >
          <div
            className="username"
          >
            Deleted user account
          </div>
          <div
            className="harvesting-date"
            title="2018-03-29T16:28:27.324276+00:00"
          >
            2018-04-29T16:28:27.324276+00:00
          </div>
        </div>
      </div>
    </div>
    <div
      className="harvesting-box-body"
    >
      <div
        className="body-container"
      >
        <div
          className="previous-extract"
        />
        <div
          className="extract-body"
        >
          Hello world!
        </div>
        <div
          className="next-extract"
        >
          <div
            onClick={[Function]}
          >
            <span
              className="assembl-icon-down-open grey"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="extracts-numbering"
    >
      1
      /
      5
    </div>
    <Tags
      canEdit={false}
      contextId="987643"
      initialValues={
        Array [
          Object {
            "label": "foo",
            "value": "fooid",
          },
          Object {
            "label": "bar",
            "value": "barid",
          },
        ]
      }
      updateTags={[Function]}
    />
  </div>
</div>
`;

exports[`harvestingBox component should match harvestingBox snapshot when extracts is undefined 1`] = `
<div
  className=""
>
  <div>
    <div
      className="harvesting-close-button"
      onClick={[MockFunction]}
    >
      <span
        className="assembl-icon-cancel grey"
      />
    </div>
  </div>
  <div
    className="theme-box harvesting-box"
  >
    <div
      className="harvesting-box-header"
    >
      <div
        className="harvesting-status"
      >
        <div
          className="harvesting-in-progress"
        >
          <div
            className="harvesting-status-label"
          >
            <Translate
              value="harvesting.inProgress"
            />
          </div>
        </div>
      </div>
      <div
        className="button-bar"
      >
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="editExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.editExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className=""
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-edit grey"
            />
          </Button>
        </OverlayTrigger>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="deleteExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.deleteExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-delete grey"
            />
          </Button>
        </OverlayTrigger>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="qualifyExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.qualifyExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className="taxonomy-menu-btn"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-ellipsis-vert grey"
            />
          </Button>
        </OverlayTrigger>
      </div>
      <div
        className="profile"
      >
        <AvatarImage
          userId={null}
          userName={null}
        />
        <div
          className="harvesting-infos"
        >
          <div
            className="username"
          />
          <div
            className="harvesting-date"
          >
            <Translate
              value="harvesting.now"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="harvesting-box-body"
    />
    <withApollo(DumbTagsForm)
      onSubmit={[Function]}
      renderFooter={[Function]}
    />
  </div>
</div>
`;

exports[`harvestingBox component should match harvestingBox snapshot when nugget action is visible 1`] = `
<div
  className=""
>
  <div>
    <div
      className="harvesting-close-button"
      onClick={[MockFunction]}
    >
      <span
        className="assembl-icon-cancel grey"
      />
    </div>
  </div>
  <div
    className="theme-box harvesting-box active-box"
  >
    <div
      className="harvesting-box-header"
    >
      <div
        className="extracts-nb-msg"
      >
        <Translate
          count={5}
          extractNumber={5}
          value="harvesting.harvestedExtractNumbers"
        />
      </div>
      <div
        className="harvesting-status"
      >
        <div>
          <div
            className="validated-harvesting"
          >
            <div
              className="harvesting-status-label"
            >
              <Translate
                value="harvesting.validated"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="button-bar"
      >
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="editExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.editExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-edit grey"
            />
          </Button>
        </OverlayTrigger>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="deleteExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.deleteExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-delete grey"
            />
          </Button>
        </OverlayTrigger>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="nuggetExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.nuggetExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-pepite grey"
            />
          </Button>
        </OverlayTrigger>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="qualifyExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.qualifyExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className="taxonomy-menu-btn"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-ellipsis-vert grey"
            />
          </Button>
        </OverlayTrigger>
      </div>
      <div
        className="profile"
      >
        <AvatarImage
          userId={31}
          userName="John Doe"
        />
        <div
          className="harvesting-infos"
        >
          <div
            className="username"
          >
            John Doe
          </div>
          <div
            className="harvesting-date"
            title="2018-03-29T16:28:27.324276+00:00"
          >
            2018-04-29T16:28:27.324276+00:00
          </div>
        </div>
      </div>
    </div>
    <div
      className="harvesting-box-body"
    >
      <div
        className="body-container"
      >
        <div
          className="previous-extract"
        />
        <div
          className="extract-body"
        >
          Hello world!
        </div>
        <div
          className="next-extract"
        >
          <div
            onClick={[Function]}
          >
            <span
              className="assembl-icon-down-open grey"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="extracts-numbering"
    >
      1
      /
      5
    </div>
    <Tags
      canEdit={false}
      contextId="987643"
      initialValues={
        Array [
          Object {
            "label": "foo",
            "value": "fooid",
          },
          Object {
            "label": "bar",
            "value": "barid",
          },
        ]
      }
      updateTags={[Function]}
    />
  </div>
</div>
`;

exports[`harvestingBox component should match harvestingBox snapshot when selection is undefined 1`] = `
<div
  className=""
>
  <div>
    <div
      className="harvesting-close-button"
      onClick={[MockFunction]}
    >
      <span
        className="assembl-icon-cancel grey"
      />
    </div>
  </div>
  <div
    className="theme-box harvesting-box active-box"
  >
    <div
      className="harvesting-box-header"
    >
      <div
        className="extracts-nb-msg"
      >
        <Translate
          count={5}
          extractNumber={5}
          value="harvesting.harvestedExtractNumbers"
        />
      </div>
      <div
        className="harvesting-status"
      >
        <div>
          <div
            className="validated-harvesting"
          >
            <div
              className="harvesting-status-label"
            >
              <Translate
                value="harvesting.validated"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="button-bar"
      >
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="editExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.editExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-edit grey"
            />
          </Button>
        </OverlayTrigger>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="deleteExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.deleteExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-delete grey"
            />
          </Button>
        </OverlayTrigger>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="qualifyExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.qualifyExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className="taxonomy-menu-btn"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-ellipsis-vert grey"
            />
          </Button>
        </OverlayTrigger>
      </div>
      <div
        className="profile"
      >
        <AvatarImage
          userId={31}
          userName="John Doe"
        />
        <div
          className="harvesting-infos"
        >
          <div
            className="username"
          >
            John Doe
          </div>
          <div
            className="harvesting-date"
            title="2018-03-29T16:28:27.324276+00:00"
          >
            2018-04-29T16:28:27.324276+00:00
          </div>
        </div>
      </div>
    </div>
    <div
      className="harvesting-box-body"
    >
      <div
        className="body-container"
      >
        <div
          className="previous-extract"
        />
        <div
          className="extract-body"
        >
          Hello world!
        </div>
        <div
          className="next-extract"
        >
          <div
            onClick={[Function]}
          >
            <span
              className="assembl-icon-down-open grey"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="extracts-numbering"
    >
      1
      /
      5
    </div>
    <Tags
      canEdit={false}
      contextId="987643"
      initialValues={
        Array [
          Object {
            "label": "foo",
            "value": "fooid",
          },
          Object {
            "label": "bar",
            "value": "barid",
          },
        ]
      }
      updateTags={[Function]}
    />
  </div>
</div>
`;

exports[`harvestingBox component should match harvestingBox snapshot when the component is in harvesting mode 1`] = `
<div
  className=""
>
  <div>
    <div
      className="harvesting-close-button"
      onClick={[MockFunction]}
    >
      <span
        className="assembl-icon-cancel grey"
      />
    </div>
  </div>
  <div
    className="theme-box harvesting-box active-box"
  >
    <div
      className="harvesting-box-header"
    >
      <div
        className="extracts-nb-msg"
      >
        <Translate
          count={5}
          extractNumber={5}
          value="harvesting.harvestedExtractNumbers"
        />
      </div>
      <div
        className="harvesting-status"
      >
        <div>
          <div
            className="validated-harvesting"
          >
            <div
              className="harvesting-status-label"
            >
              <Translate
                value="harvesting.validated"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="button-bar"
      >
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="editExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.editExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-edit grey"
            />
          </Button>
        </OverlayTrigger>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="deleteExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.deleteExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-delete grey"
            />
          </Button>
        </OverlayTrigger>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="qualifyExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.qualifyExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className="taxonomy-menu-btn"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-ellipsis-vert grey"
            />
          </Button>
        </OverlayTrigger>
      </div>
      <div
        className="profile"
      >
        <AvatarImage
          userId={31}
          userName="John Doe"
        />
        <div
          className="harvesting-infos"
        >
          <div
            className="username"
          >
            John Doe
          </div>
          <div
            className="harvesting-date"
            title="2018-03-29T16:28:27.324276+00:00"
          >
            2018-04-29T16:28:27.324276+00:00
          </div>
        </div>
      </div>
    </div>
    <div
      className="harvesting-box-body"
    >
      <div
        className="body-container"
      >
        <div
          className="previous-extract"
        />
        <div
          className="extract-body"
        >
          Hello world!
        </div>
        <div
          className="next-extract"
        >
          <div
            onClick={[Function]}
          >
            <span
              className="assembl-icon-down-open grey"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="extracts-numbering"
    >
      1
      /
      5
    </div>
    <Tags
      canEdit={false}
      contextId="987643"
      initialValues={
        Array [
          Object {
            "label": "foo",
            "value": "fooid",
          },
          Object {
            "label": "bar",
            "value": "barid",
          },
        ]
      }
      updateTags={[Function]}
    />
  </div>
</div>
`;

exports[`harvestingBox component should match harvestingBox snapshot when there are extracts 1`] = `
<div
  className=""
>
  <div>
    <div
      className="harvesting-close-button"
      onClick={[MockFunction]}
    >
      <span
        className="assembl-icon-cancel grey"
      />
    </div>
  </div>
  <div
    className="theme-box harvesting-box active-box"
  >
    <div
      className="harvesting-box-header"
    >
      <div
        className="extracts-nb-msg"
      >
        <Translate
          count={5}
          extractNumber={5}
          value="harvesting.harvestedExtractNumbers"
        />
      </div>
      <div
        className="harvesting-status"
      >
        <div>
          <div
            className="validated-harvesting"
          >
            <div
              className="harvesting-status-label"
            >
              <Translate
                value="harvesting.validated"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="button-bar"
      >
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="editExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.editExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-edit grey"
            />
          </Button>
        </OverlayTrigger>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="deleteExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.deleteExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-delete grey"
            />
          </Button>
        </OverlayTrigger>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="qualifyExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.qualifyExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className="taxonomy-menu-btn"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-ellipsis-vert grey"
            />
          </Button>
        </OverlayTrigger>
      </div>
      <div
        className="profile"
      >
        <AvatarImage
          userId={31}
          userName="John Doe"
        />
        <div
          className="harvesting-infos"
        >
          <div
            className="username"
          >
            John Doe
          </div>
          <div
            className="harvesting-date"
            title="2018-03-29T16:28:27.324276+00:00"
          >
            2018-04-29T16:28:27.324276+00:00
          </div>
        </div>
      </div>
    </div>
    <div
      className="harvesting-box-body"
    >
      <div
        className="body-container"
      >
        <div
          className="previous-extract"
        />
        <div
          className="extract-body"
        >
          Hello world!
        </div>
        <div
          className="next-extract"
        >
          <div
            onClick={[Function]}
          >
            <span
              className="assembl-icon-down-open grey"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="extracts-numbering"
    >
      1
      /
      5
    </div>
    <Tags
      canEdit={false}
      contextId="987643"
      initialValues={
        Array [
          Object {
            "label": "foo",
            "value": "fooid",
          },
          Object {
            "label": "bar",
            "value": "barid",
          },
        ]
      }
      updateTags={[Function]}
    />
  </div>
</div>
`;

exports[`harvestingBox component should match harvestingBox snapshot when there are extracts with active extract 1`] = `
<div
  className=""
>
  <div>
    <div
      className="harvesting-close-button"
      onClick={[MockFunction]}
    >
      <span
        className="assembl-icon-cancel grey"
      />
    </div>
  </div>
  <div
    className="theme-box harvesting-box active-box"
  >
    <div
      className="harvesting-box-header"
    >
      <div
        className="extracts-nb-msg"
      >
        <Translate
          count={5}
          extractNumber={5}
          value="harvesting.harvestedExtractNumbers"
        />
      </div>
      <div
        className="harvesting-status"
      >
        <div>
          <div
            className="validated-harvesting"
          >
            <div
              className="harvesting-status-label"
            >
              <Translate
                value="harvesting.validated"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="button-bar"
      >
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="editExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.editExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-edit grey"
            />
          </Button>
        </OverlayTrigger>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="deleteExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.deleteExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-delete grey"
            />
          </Button>
        </OverlayTrigger>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="qualifyExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.qualifyExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className="taxonomy-menu-btn"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-ellipsis-vert grey"
            />
          </Button>
        </OverlayTrigger>
      </div>
      <div
        className="profile"
      >
        <AvatarImage
          userId={29}
          userName="Alice Thomas"
        />
        <div
          className="harvesting-infos"
        >
          <div
            className="username"
          >
            Alice Thomas
          </div>
          <div
            className="harvesting-date"
            title="2018-04-29T16:28:27.324276+00:00"
          >
            2018-04-29T16:28:27.324276+00:00
          </div>
        </div>
      </div>
    </div>
    <div
      className="harvesting-box-body"
    >
      <div
        className="body-container"
      >
        <div
          className="previous-extract"
        >
          <div
            onClick={[Function]}
          >
            <span
              className="assembl-icon-down-open grey"
            />
          </div>
        </div>
        <div
          className="extract-body"
        >
          Hello everybody!
        </div>
        <div
          className="next-extract"
        >
          <div
            onClick={[Function]}
          >
            <span
              className="assembl-icon-down-open grey"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="extracts-numbering"
    >
      2
      /
      5
    </div>
    <Tags
      canEdit={false}
      contextId="75432"
      initialValues={Array []}
      updateTags={[Function]}
    />
  </div>
</div>
`;

exports[`harvestingBox component should match harvestingBox snapshot when there are no extracts 1`] = `
<div
  className=""
>
  <div>
    <div
      className="harvesting-close-button"
      onClick={[MockFunction]}
    >
      <span
        className="assembl-icon-cancel grey"
      />
    </div>
  </div>
  <div
    className="theme-box harvesting-box"
  >
    <div
      className="harvesting-box-header"
    >
      <div
        className="extracts-nb-msg"
      >
        <Translate
          count={0}
          extractNumber={0}
          value="harvesting.harvestedExtractNumbers"
        />
      </div>
      <div
        className="harvesting-status"
      >
        <div
          className="harvesting-in-progress"
        >
          <div
            className="harvesting-status-label"
          >
            <Translate
              value="harvesting.inProgress"
            />
          </div>
        </div>
      </div>
      <div
        className="button-bar"
      >
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="editExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.editExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className=""
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-edit grey"
            />
          </Button>
        </OverlayTrigger>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="deleteExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.deleteExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-delete grey"
            />
          </Button>
        </OverlayTrigger>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="qualifyExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.qualifyExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className="taxonomy-menu-btn"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-ellipsis-vert grey"
            />
          </Button>
        </OverlayTrigger>
      </div>
      <div
        className="profile"
      >
        <AvatarImage
          userId={null}
          userName={null}
        />
        <div
          className="harvesting-infos"
        >
          <div
            className="username"
          />
          <div
            className="harvesting-date"
          >
            <Translate
              value="harvesting.now"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="harvesting-box-body"
    />
    <withApollo(DumbTagsForm)
      onSubmit={[Function]}
      renderFooter={[Function]}
    />
  </div>
</div>
`;

exports[`harvestingBox component should match harvestingBox snapshot with annotation 1`] = `
<div
  className=""
>
  <div>
    <div
      className="harvesting-close-button"
      onClick={[MockFunction]}
    >
      <span
        className="assembl-icon-cancel grey"
      />
    </div>
  </div>
  <div
    className="theme-box harvesting-box"
  >
    <div
      className="harvesting-box-header"
    >
      <div
        className="harvesting-status"
      >
        <div
          className="harvesting-in-progress"
        >
          <div
            className="harvesting-status-label"
          >
            <Translate
              value="harvesting.inProgress"
            />
          </div>
        </div>
      </div>
      <div
        className="button-bar"
      >
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="editExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.editExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className=""
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-edit grey"
            />
          </Button>
        </OverlayTrigger>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="deleteExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.deleteExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-delete grey"
            />
          </Button>
        </OverlayTrigger>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="qualifyExtractTooltip"
              placement="right"
            >
              <Translate
                value="harvesting.qualifyExtract"
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className="taxonomy-menu-btn"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="assembl-icon-ellipsis-vert grey"
            />
          </Button>
        </OverlayTrigger>
      </div>
      <div
        className="profile"
      >
        <AvatarImage
          userId={null}
          userName={null}
        />
        <div
          className="harvesting-infos"
        >
          <div
            className="username"
          />
          <div
            className="harvesting-date"
          >
            <Translate
              value="harvesting.now"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="harvesting-box-body"
    >
      <div
        className="selection-body"
      >
        extract text
      </div>
    </div>
    <withApollo(DumbTagsForm)
      onSubmit={[Function]}
      renderFooter={[Function]}
    />
  </div>
</div>
`;
